--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ text-align: center;
 }
 .clue {
 background-color: yellow;
-min-height: 300px;
+/* min-height: 300px; */
 width: 30%;
 display: inline-flex;
 margin: 10px;
@@ -20,3 +20,85 @@ color: black;
 h2 {
     text-align: center;
 }
+
+.flip-card,   .flip-card-clicked  {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  } */
+  .flip-card-clicked .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+    overflow: hidden;
+  }
+
+#card-container{
+    width:90%;margin:0 auto;
+    display:flex;
+    flex-wrap: wrap;
+    background-color: bisque;
+}
+
+#cropped-img-frame {
+    width: 100px; 
+    height: 100px; 
+    overflow: hidden;
+    display:block;
+    margin:0 auto;
+}
+    
+
+
+.clue{width:180px;height:200px;margin:5px;}
+
+.img-blur .flip-card-back img{width:100%;filter:blur(10px)}
+
+.container{display:flex;width:90%;margin:10px auto;justify-content: space-between;}
+#img-container{
+    width:38%;
+    display:flex;
+    align-items: flex-start;}
+    #img-container span{overflow:hidden;
+        border:1px solid black;
+        border-radius: 10px;}   
+#card-container2{
+    width:58%;margin:0 auto;
+    display:flex;
+    flex-wrap: wrap;
+    background-color: bisque;
+}
+#img-container img{width:100%;filter:blur(30px)} 
+#card-container2 .clue{width:180px;height:180px;}
