--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,10 +90,11 @@ h2 {
 #img-container{
     width:38%;
     display:flex;
+    flex-direction: column;
     align-items: flex-start;}
-    #img-container span{overflow:hidden;
-        border:1px solid black;
-        border-radius: 10px;}   
+ #img-container span{overflow:hidden;
+    border:1px solid black;
+    border-radius: 10px;}   
 #card-container2{
     width:58%;margin:0 auto;
     display:flex;
