--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,3 +108,29 @@ h2 {
 }
 #img-container img{width:100%;filter:blur(30px)} 
 #card-container2 .clue{width:180px;height:180px;}
+
+#info h1{
+  font-size:1.6em;
+}
+#youtube-info{margin-bottom:6px;}
+#youtube-info section{display:flex;padding:4px 0;border-bottom:1px solid black;}
+#youtube-info section a{margin-right:10px;}
+#youtube-info article{
+  width:80%;
+  padding:3px 0 0 0;
+}
+#youtube-info article h3{
+  text-align:left;
+  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin:0 0 3px 0;
+  font-weight:bold;
+
+  text-decoration: none;
+  line-height: 1.2;
+  font-size:1.3em;
+}
+#youtube-info article p{
+  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  line-height: 1.2;
+  font-size:1.1em;
+}
