--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body{
-  background-color: rgb(60,64,67);
+  background-color: rgb(71, 71, 71);
   display:block;
     color: aliceblue;
 }
 header {
 text-align: center;
+font-size: xx-large;
 }
 .hide {
   display: none;
@@ -24,7 +25,13 @@ color: black;
 h2 {
     text-align: center;
 }
-
+ li {
+  text-align: left;
+ }
+#startImage {
+  max-height: 30vh;
+  min-height: 200px;
+}
 .flip-card,   .flip-card-clicked  {
     background-color: transparent;
     width: 100%;
@@ -58,7 +65,7 @@ h2 {
   }
   
   .flip-card-front {
-    background-color:rgb(60,64,67);
+    background-color:rgb(71,71,71);
     color: black;
   }
   
