--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,27 @@ h2 {
  li {
   text-align: left;
  }
+ 
+#start-image-and-info {
+  display: flex;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  justify-content: center;
+  margin-left: 10%;
+}
+
+#startImageInfo{
+  display: flex;
+  flex-direction: column;
+  /* align-self: center; */
+  justify-content: space-evenly;
+}
+
 #startImage {
   max-height: 30vh;
   min-height: 200px;
 }
+
 .flip-card,   .flip-card-clicked  {
   background-color: transparent;
   width: 100%;
